Add base structure, dummy connector and endpoints for single and list of data products
