# api/openapi.yaml
@@ -22,135 +22,80 @@ paths:
           content:
             application/json:
               schema: {}
-  /:
+  /health-check/:
     get:
-      summary: Example endpoint
-      description: Example endpoint that returns test data
-      operationId: example__get
+      summary: Health check
+      description: Returns a 200 status code if the service is up and running
+      operationId: health_check
       responses:
         '200':
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ExampleResponse'
-  /item/:
+                $ref: '#/components/schemas/HealthCheck'
+  /data-products/:
     get:
       tags:
-      - items
-      summary: Read all items
-      description: Read all items from the storage
-      operationId: items__read_all
+      - Data product
+      summary: Get a list of data products
+      description: Returns a list of data products with the ability to paginate
+      operationId: get_data_products
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 1
+          title: Page
+      - name: pageSize
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 100
+          title: Pagesize
       responses:
         '200':
           description: Successful Response
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/Item'
-                type: array
-                title: Response Items  Read All
-    post:
-      tags:
-      - items
-      summary: Create an item
-      description: Create a new item in the storage
-      operationId: items__create
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Item'
-        required: true
-      responses:
-        '201':
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/PaginatedResult'
         '422':
           description: Validation Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
-  /item/{id}/:
+  /data-products/{connector_id}/{data_product_id}/:
     get:
       tags:
-      - items
-      summary: Read an item
-      description: Read item from the storage
-      operationId: items__read_item
+      - Data product
+      summary: Get a data product details
+      description: Returns an information about the data product
+      operationId: get_data_product
       parameters:
-      - name: id
+      - name: connector_id
         in: path
         required: true
         schema:
-          type: integer
-          title: Id
+          type: string
+          title: Connector Id
+      - name: data_product_id
+        in: path
+        required: true
+        schema:
+          type: string
+          title: Data Product Id
       responses:
         '200':
           description: Successful Response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-    put:
-      tags:
-      - items
-      summary: Update an item
-      description: Update an item in the storage
-      operationId: items__update_item
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          title: Id
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Item'
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Item'
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-    delete:
-      tags:
-      - items
-      summary: Delete an item
-      description: Delete an item from the storage
-      operationId: items__delete_item
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          title: Id
-      responses:
-        '204':
-          description: Successful Response
+                $ref: '#/components/schemas/DataProduct'
         '422':
           description: Validation Error
           content:
@@ -159,18 +104,75 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
 components:
   schemas:
-    ExampleResponse:
+    Connector:
       properties:
-        value:
+        id:
           type: string
-          title: Value
+          title: Id
       type: object
       required:
-      - value
-      title: ExampleResponse
-      description: Example data
+      - id
+      title: Connector
+    DataProduct:
+      properties:
+        id:
+          type: string
+          title: Id
+        name:
+          type: string
+          title: Name
+        size:
+          type: integer
+          title: Size
+        mimetype:
+          type: string
+          title: Mimetype
+        digest:
+          type: string
+          title: Digest
+        tags:
+          items:
+            $ref: '#/components/schemas/Tag'
+          type: array
+          title: Tags
+        source:
+          additionalProperties:
+            anyOf:
+            - $ref: '#/components/schemas/Connector'
+            - $ref: '#/components/schemas/Interface'
+          type: object
+          title: Source
+        _links:
+          additionalProperties:
+            type: string
+          type: object
+          title: ' Links'
+      type: object
+      required:
+      - id
+      - name
+      - size
+      - mimetype
+      - digest
+      - tags
+      - source
+      - _links
+      title: DataProduct
       examples:
-      - value: test value
+      - _links:
+          accessPoint: /connector1/interface1/8D8AC610-566D-4EF0-9C22-186B2A5ED793/
+        digest: 1df50e8ad219e34f0b911e097b7b588e31f9b435
+        id: 8D8AC610-566D-4EF0-9C22-186B2A5ED793
+        mimetype: text/plain
+        name: cancer_data_2024
+        size: 1024
+        source:
+          connector:
+            id: connector1
+          interface:
+            id: interface1
+        tags:
+        - text: tag1
     HTTPValidationError:
       properties:
         detail:
@@ -180,22 +182,52 @@ components:
           title: Detail
       type: object
       title: HTTPValidationError
-    Item:
+    HealthCheck:
+      properties:
+        status:
+          type: string
+          title: Status
+      type: object
+      required:
+      - status
+      title: HealthCheck
+    Interface:
       properties:
         id:
-          type: integer
-          title: Id
-        name:
           type: string
-          title: Name
+          title: Id
       type: object
       required:
       - id
-      - name
-      title: Item
-      examples:
-      - id: 1
-        name: test name
+      title: Interface
+    PaginatedResult:
+      properties:
+        page:
+          type: integer
+          title: Page
+        size:
+          type: integer
+          title: Size
+        items:
+          items:
+            $ref: '#/components/schemas/DataProduct'
+          type: array
+          title: Items
+      type: object
+      required:
+      - page
+      - size
+      - items
+      title: PaginatedResult
+    Tag:
+      properties:
+        text:
+          type: string
+          title: Text
+      type: object
+      required:
+      - text
+      title: Tag
     ValidationError:
       properties:
         loc:
