# server/app/core/connectors/__init__.py
@@ -1,0 +1,1 @@
+from .interface import IConnector  # noqa
