# server/app/main.py
@@ -4,7 +4,11 @@ from fastapi import FastAPI
 from fastapi.openapi.utils import get_openapi
 from prometheus_fastapi_instrumentator import Instrumentator
 
-from . import example, items
+from .config import CONNECTORS
+from .core import init_repository
+from .rest_api.routes import data_products, health_check
+
+init_repository(CONNECTORS)
 
 
 class CustomFastAPI(FastAPI):
@@ -33,10 +37,7 @@ class CustomFastAPI(FastAPI):
 
 
 app = CustomFastAPI()
-
-
 Instrumentator().instrument(app).expose(app)
 
-
-app.include_router(example.router)
-app.include_router(items.routes.router)
+app.include_router(health_check.routes.router)
+app.include_router(data_products.routes.router)
