# server/app/rest_api/strings.py
@@ -1,0 +1,2 @@
+CONNECTOR_NOT_FOUND = "Connector not found"
+DATA_PRODUCT_NOT_FOUND = "Data Product not found"
